@@ -7,14 +7,7 @@
 	<path id="maven-ant-tasks.classpath" path="../../lib/maven-ant-tasks-2.0.10.jar" />
 	<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="maven-ant-tasks.classpath" />
 	
-	<!-- retrieve the web project pom file and import its jar dependencies -->
-	<artifact:pom id="warPom" file="pom.xml"/>
-	<artifact:dependencies filesetId="warDeps" pomRefId="warPom" useScope="test" />
 	<property name="project.root" location="../../"/>
-	
-	<path id="build.runtime.classpath">
-		<fileset refid="warDeps"/>
-	</path>
 	
 	<property file="../../build.properties"/>
 	
@@ -78,6 +71,19 @@
 		</artifact:mvn>
 	</target>
 	
+	<target name="jetty-debug" depends="start-db">
+		<delete dir="war/WEB-INF/lib"/>
+		<artifact:dependencies pathId="agentPathId">
+			<dependency groupId="org.springframework" artifactId="spring-instrument" version="3.0.5.RELEASE"/>
+		</artifact:dependencies>
+		<property name="agentJarPath" refid="agentPathId"/>
+		<artifact:mvn mavenHome="${maven.home}" fork="true" jvmargs="-XX:MaxPermSize=256M -Xmx512M -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8001">
+			<arg value="compile"/>
+			<arg value="war:exploded"/>
+			<arg value="jetty:run"/>
+		</artifact:mvn>
+	</target>
+	
 	<target name="jetty-demo-jrebel">
 		<delete dir="war/WEB-INF/lib"/>
 		<artifact:mvn mavenHome="${maven.home}" fork="true" jvmargs=" -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -XX:MaxPermSize=256M -Xmx512M -Drebel.root=${project.root} -Dlogs.dir=${logs.dir} -noverify -javaagent:${jrebel.path} -agentpath:${yourkit.agent.path}libyjpagent.jnilib=builtinprobes=none,delay=10000,sessionname=Jetty">
@@ -104,6 +110,13 @@
 	</target>
 	
 	<target name="start-db">  
+		<!-- retrieve the web project pom file and import its jar dependencies -->
+		<artifact:pom id="warPom" file="pom.xml"/>
+		<artifact:dependencies filesetId="warDeps" pomRefId="warPom" useScope="test" />
+		<path id="build.runtime.classpath">
+			<fileset refid="warDeps"/>
+		</path>
+			
         <echo message="Starting Data Base..." />  
         <java fork="true"  spawn="true" classname="org.hsqldb.Server" classpathref="build.runtime.classpath">  
             <arg  line="-database.0 file:data/broadleaf -dbname.0 broadleaf"/>  
@@ -111,6 +124,13 @@
     </target>
 	
 	<target name="stop-db">  
+		<!-- retrieve the web project pom file and import its jar dependencies -->
+		<artifact:pom id="warPom" file="pom.xml"/>
+		<artifact:dependencies filesetId="warDeps" pomRefId="warPom" useScope="test" />
+		<path id="build.runtime.classpath">
+			<fileset refid="warDeps"/>
+		</path>
+		
         <echo message="Execute SQL on new Data Base..." />  
         <sql  
             autocommit="true"  
